--- a/ant/legacy.properties
+++ b/ant/legacy.properties
@@ -1,8 +1,8 @@
 #
-# common.properties
+# legacy.properties
 #
 
-# Ant properties file for use with common.xml.
+# Ant properties file for use with legacy.xml.
 # Download Apache Ant from http://ant.apache.org/.
 # Type "ant -p" for a list of targets.
 
