--- a/components/scifio-devel/build.properties
+++ b/components/scifio-devel/build.properties
@@ -28,23 +28,4 @@ component.runtime-cp     = ${component.classpath}:\
                            ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
                            ${lib.dir}/xalan-2.7.1.jar
 
-# Used by TestNG suite that tests the absence of classes from ome-xml.jar
-component.cp.no-xml      = ${lib.dir}/forms-1.3.0.jar:\
-                           ${lib.dir}/log4j-1.2.15.jar:\
-                           ${lib.dir}/netcdf-4.0.jar:\
-                           ${lib.dir}/slf4j-api-1.5.10.jar:\
-                           ${lib.dir}/testng-5.11-jdk15.jar
-
-# Used by TestNG suite that tests the absence of class from jai_imageio.jar
-component.cp.no-jai      = ${lib.dir}/forms-1.3.0.jar:\
-                           ${lib.dir}/log4j-1.2.15.jar:\
-                           ${lib.dir}/slf4j-api-1.5.10.jar:\
-                           ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
-                           ${lib.dir}/testng-5.11-jdk15.jar
-
-# Used by TestNG suite that tests the absence of class from stubs.jar
-component.cp.no-lurawave = ${lib.dir}/forms-1.3.0.jar:\
-                           ${lib.dir}/log4j-1.2.15.jar:\
-                           ${lib.dir}/slf4j-api-1.5.10.jar:\
-                           ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
-                           ${lib.dir}/testng-5.11-jdk15.jar
+testng.xml.template      = ${test.dir}/ome/scifio/io/utests/testng-template.xml
