--- a/components/scifio-devel/build.xml
+++ b/components/scifio-devel/build.xml
@@ -11,4 +11,46 @@ Type "ant -p" for a list of targets.
   <property name="root.dir" location="../.."/>
   <import file="${root.dir}/ant/java.xml"/>
   <property file="build.properties"/>
+
+  <target name="test" depends="jar, compile-tests" description="run tests">
+    <!-- NOTE: Overrides default "test" target from java.xml -->
+    <copy tofile="${build.dir}/testng.xml"
+      file="${testng.xml.template}" overwrite="true">
+      <filterset>
+        <!-- Disable parallelization -->
+        <filter token="PARALLEL" value="false"/>
+      </filterset>
+    </copy>
+    <testng failureProperty="failedTest">
+      <classpath>
+        <pathelement location="${test-classes.dir}"/>
+        <pathelement location="${classes.dir}"/>
+        <pathelement path="${component.runtime-cp}"/>
+      </classpath>
+      <xmlfileset file="${build.dir}/testng.xml"/>
+      <jvmarg value="-mx${testng.memory}"/>
+    </testng>
+    <fail if="failedTest"/>
+  </target>
+
+  <target name="test-parallel" depends="compile-tests"
+    description="run parallel tests" if="doTests">
+    <copy tofile="${build.dir}/testng.xml"
+      file="${testng.xml.template}" overwrite="true">
+      <filterset>
+        <!-- Enable parallelization -->
+        <filter token="PARALLEL" value="classes"/>
+      </filterset>
+    </copy>
+    <testng failureProperty="failedTest">
+      <classpath>
+        <pathelement location="${test-classes.dir}"/>
+        <pathelement location="${classes.dir}"/>
+        <pathelement path="${component.runtime-cp}"/>
+      </classpath>
+      <xmlfileset file="${build.dir}/testng.xml"/>
+      <jvmarg value="-mx${testng.memory}"/>
+    </testng>
+    <fail if="failedTest"/>
+  </target>
 </project>
