--- a/components/scifio/pom.xml
+++ b/components/scifio/pom.xml
@@ -51,6 +51,11 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>scifio-devel</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
       <groupId>com.jgoodies</groupId>
       <artifactId>forms</artifactId>
       <version>1.2.1</version>
@@ -120,6 +125,8 @@
           <sourceDir>cppwrap</sourceDir>
           <libraries>
             <library>${project.groupId}:ome-xml:jar:${project.version}</library>
+            <library>${project.groupId}:loci-legacy:jar:${project.version}</library>
+            <library>${project.groupId}:scifio-devel:jar:${project.version}</library>
           </libraries>
         </configuration>
       </plugin>
