--- a/components/loci-legacy/pom.xml
+++ b/components/loci-legacy/pom.xml
@@ -15,8 +15,19 @@
   <artifactId>loci-legacy</artifactId>
 
   <name>Loci-Legacy</name>
-  <description>Legacy layer of delegating classes to preserve
-  backwards compatibility between the legacy Bio-Formats classes and SCIFIO.</description>
+  <description>The loci-legacy component preserves classic bio-formats
+  package structures as classes and components are moved to SCIFIO. For
+  example, if loci.formats.Sample.java is migrated from the bio-formats
+  component to ome.scifio.Sample.java in the scifio component, then
+  a loci.formats.Sample.java would also be added to loci-legacy. This
+  class would be an empty delegator and would pass all control to the
+  ome.scifio class. (thus loci-legacy depends only the scifio component)
+
+  All delegators should use a "has a" pattern when possible.
+
+  By including this component, all backwards compatibility with downstream
+  code using legacy packages will be preserved, yet functionality can
+  continue to be improved via delegating to the latest SCIFIO code.</description>
   <url>http://loci.wisc.edu/software</url>
   <inceptionYear>2005</inceptionYear>
 
