--- a/docs/sphinx/Makefile
+++ b/docs/sphinx/Makefile
@@ -2,6 +2,7 @@
 #
 
 # You can set these variables from the command line.
+PWD = $(shell pwd)
 SPHINXOPTS    =
 SPHINXBUILD   = sphinx-build
 PAPER         =
