--- a/components/common/build.properties
+++ b/components/common/build.properties
@@ -8,7 +8,7 @@
 
 component.name           = loci-common
 component.jar            = loci-common.jar
-component.version        = 4.4.4
+component.version        = 4.5-DEV
 component.classpath      = ${lib.dir}/slf4j-api-1.5.10.jar:\
                            ${lib.dir}/testng-5.11-jdk15.jar
 component.java-version   = 1.5
