--- a/components/ome-io/build.properties
+++ b/components/ome-io/build.properties
@@ -8,7 +8,7 @@
 
 component.name           = ome-io
 component.jar            = ome-io.jar
-component.version        = 4.4.4
+component.version        = 4.5-DEV
 component.classpath      = ${artifact.dir}/loci-common.jar:\
                            ${artifact.dir}/ome-xml.jar:\
                            ${artifact.dir}/scifio.jar:\
