Revert "Added missing logging jars to classpaths"
This reverts commit f59a1ffad3cd50ccd9202996b5c4c96240f0ccb5.

--- a/components/ome-io/build.properties
+++ b/components/ome-io/build.properties
@@ -24,8 +24,7 @@ component.resources-bin  = loci/ome/io/ome-logo.png
 component.resources-text =
 
 component.main-class     = loci.ome.io.OmeroReader
-component.runtime-cp     = ${component.classpath}:\
-                           ${lib.dir}/slf4j-log4j12-1.5.10.jar
+component.runtime-cp     = ${component.classpath}
 
 
 # NB: do not include ${artifact.dir}/bio-formats.jar,
@@ -34,5 +33,4 @@ component.classpath-no-omeio  = ${root.dir}/components/bio-formats/build/classes
                                 ${artifact.dir}/loci-common.jar:\
                                 ${lib.dir}/log4j-1.2.15.jar:\
                                 ${lib.dir}/slf4j-api-1.5.10.jar:\
-                                ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
                                 ${lib.dir}/testng-5.11-jdk15.jar
