--- a/components/test-suite/build.properties
+++ b/components/test-suite/build.properties
@@ -25,8 +25,7 @@ component.resources-bin  =
 component.resources-text =
 
 component.main-class     =
-component.runtime-cp     = ${component.classpath}:\
-                           ${lib.dir}/slf4j-log4j12-1.5.10.jar
+component.runtime-cp     = ${component.classpath}
 
 testng.memory            = 512m
 reader-test.class        = loci/tests/testng/FormatReaderTestFactory.class
